--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
       <nav class="nav-menu">
         <ul>
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#about"><i class="bx bx-user"></i> <span>Über mich</span></a></li>
+          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Lebenslauf</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <li><a href="#services"><i class="bx bx-server"></i> Leistungen</a></li>
+          <li><a href="#contact"><i class="bx bx-envelope"></i> Kontakt</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -76,7 +76,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Stefanie Schutta</h1>
-      <p>I'm <span class="typed" data-typed-items="Graphic Designer, UI Designer, Photographer, Freelancer"></span></p>
+      <p> Ich bin <span class="typed" data-typed-items="Grafik Designerin, User Interface Designerin, Fotografin"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -87,8 +87,13 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Über mich</h2>
+          <p>Ich bin Stefanie Schutta und arbeite seit 10 Jahren als Grafikdesigner mit umfangreicher Erfahrung in den Bereichen
+          Print und Digital Design. Ich verwalte Projekte vom ersten Konzept bis zum endgültigen Design. Dazu gehören Aufträge für
+          digitale Anzeigen, Website-Design, Corporate Design oder Printkampagnen.
+          Werfen Sie gerne einen Blick auf mein Portfolio und wenn Ihnen gefällt, was Sie sehen, kontaktieren Sie mich gerne,
+          damit wir gemeinsam die Zukunft Ihres Unternehmens gestalten und Ihre Kunden mit neuen, einzigartigen Ideen begeistern
+          können.</p>
         </div>
 
         <div class="row">
@@ -96,24 +101,20 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Graphic Designer &amp; UI Designer.</h3>
+            <h3> Staatlich geprüfte Grafik Designerin</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 8 April 1987</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Berlin, Germany</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Geburtsdatum:</strong> 8 April 1987</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Stadt:</strong> Berlin, Deutschland</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 33</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Abschluss:</strong> Staatl. geprüfte Grafik Designerin</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> s.schutta@gmx.de</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
             </div>
@@ -132,7 +133,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Skills</h2>
+          <h2>Fähigkeiten</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -198,25 +199,16 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume</h2>
+          <h2>Lebenslauf</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Stefanie Schutta</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Berlin, Germany</li>
-                <li>s.schutta@gmx.de</li>
-              </ul>
-            </div>
-
-            <h3 class="resume-title">Education</h3>
+           
+            <h3 class="resume-title">Ausbildung</h3>
             <div class="resume-item">
-              <h4>State certified Graphic Designer &amp; Graphic Design</h4>
+              <h4>Staatlich geprüfte Grafik Designerin &amp; Graphic Design</h4>
               <h5>2006 - 2009</h5>
               <p><em>Kolping BIldungswerk, Fellbach</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
