--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>--> 
          <!--<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>--> 
           <a href="https://www.instagram.com/stefanie.schutta/" target="blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.behance.net/stefanieschutta" target="blank" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://www.behance.net/stefanieschutta" target="blank" class="google-plus"><i class='bx bxl-behance'></i></a>
           <a href="https://www.linkedin.com/in/stefanie-schutta-068b83188/" target="blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -91,6 +91,8 @@
           <p>Ich bin Stefanie Schutta und arbeite seit 10 Jahren als Grafikdesigner mit umfangreicher Erfahrung in den Bereichen
           Print und Digital Design. Ich verwalte Projekte vom ersten Konzept bis zum endgültigen Design. Dazu gehören Aufträge für
           digitale Anzeigen, Website-Design, Corporate Design oder Printkampagnen.
+          <br>
+          <br>
           Werfen Sie gerne einen Blick auf mein Portfolio und wenn Ihnen gefällt, was Sie sehen, kontaktieren Sie mich gerne,
           damit wir gemeinsam die Zukunft Ihres Unternehmens gestalten und Ihre Kunden mit neuen, einzigartigen Ideen begeistern
           können.</p>
@@ -107,7 +109,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Geburtsdatum:</strong> 8 April 1987</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Geburtsdatum:</strong> 8. April 1987</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Stadt:</strong> Berlin, Deutschland</li>
                 </ul>
               </div>
@@ -132,7 +134,7 @@
 
         <div class="section-title">
           <h2>Fähigkeiten</h2>
-          <p> Im Laufe der Jahre habe ich mir immer neue Fähigkeiten angeeignet und vorhandene Fähigkeiten vertieft und up to date gehalten. </p>
+          <p> Als Designer muss man stets am Zahn der Zeit sein, daher ist lebenslanges Erlenern neuer Fähigkeiten und Technologien für mich eine Selbstverständlichkeit. </p>
         </div>
 
         <div class="row skills-content">
@@ -201,27 +203,31 @@
           <p></p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
+        <div class="row"> <div class="col-lg-6" data-aos="fade-up">
            
             <h3 class="resume-title">Aus- und Weiterbildung</h3>
             <div class="resume-item">
               <h4>She Codes Coding Workshop</h4>
               <h5>2020</h5>
-              <p><em></em></p>
-              <a href="https://www.shecodes.io/certificates/3514b4bc32b4c3baa635ea5c7fb184b9" target="blank"> Introduction to Coding</a>
+              <p><em>Berlin, Deutschland</em></p>
+              <a href="https://www.shecodes.io/certificates/3514b4bc32b4c3baa635ea5c7fb184b9" target="blank"> Zertifikat - Introduction to Coding</a>
+              <p>HTML, CSS, Javascript</p>
             </div>
             <div class="resume-item">
-              <h4>Staatlich geprüfte Grafik Designerin</h4>
-              <h5>2006 - 2009</h5>
-              <p><em>Kolping BIldungswerk, Fellbach</em></p>
-              <p>Ausbildung in Grafik, Design, Typografie, Schriftgrafik, Freies Zeichnen, Kunstgeschichte, Werbelehre, Medientechnik, Fotografie</p>
+              <h4>Udemy Kurse</h4>
+              <h5>2020</h5>
+              <p><em>Berlin, Deutschland</em></p>
+              <a href="https://www.udemy.com/certificate/UC-dc643665-3787-4c6f-9378-20cfde6a3bdf/" target="blank"> Zertifikat -After Effects CC Masterclass</a>
+              <p>Visual Effects, Motion Graphics, Transitions, Motion Tracking</p>
+              <a href="https://www.udemy.com/certificate/UC-71357375-f47a-4638-b426-47b8d178fbcd/" target="blank"> Zertifikat - User Experience & User Interface Design</a>
+              <p>User Experience Design, Design Thinking und Lean UX, Grundlagen von Human Centered Design, Personas, User Stories und Szenarien, Erstellen von Prototypen und Animationen in Adobe XD</p>
             </div>
             <div class="resume-item">
               <h4>Grafik Designer</h4>
-              <h5>2010 - 2015</h5>
-              <p><em>WirmachenDruck GmbH, Backnang</em></p>
-              <p>Kreation von Printprodukten, Großkundenbetreuung, Qualitätsmanagement, Führungsverantwortung</p>
+              <h5>2018</h5>
+              <p><em>AID Kurse</em></p>
+              <p>Kurs: Editorial Design
+                <br> Kurs: Informationen visualisieren</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -245,6 +251,27 @@
                 <li>Logo Design</li>
                 <li>Animationen für Web Ads</li>
                 <li>Kreation von Moodboards für diverse Kampagnen</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Grafik Designer</h4>
+              <h5>2015 - 2019</h5>
+              <p><em>All you need GmbH</em></p>
+              <ul>
+                <li>Entwicklung und Überwachung des Corporate Designs</li>
+                <li>Social Media Design, Web Design (animated Ads, Landingpages etc.)</li>
+                <li>Produktfotografie, Foodfotografie</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Grafik Designer</h4>
+              <h5>2010 - 2015</h5>
+              <p><em>WirmachenDruck GmbH</em></p>
+              <ul>
+                <li>Kreation von Printprodukten</li>
+                <li>Großkundenbetreuung</li>
+                <li>Qualitätsmanagement</li>
+                <li>Führungsverantwortung</li>
               </ul>
             </div>
           </div>
