--- a/index.html
+++ b/index.html
@@ -226,8 +226,10 @@
               <h4>Grafik Designer</h4>
               <h5>2018</h5>
               <p><em>AID Kurse</em></p>
-              <p>Kurs: Editorial Design
-                <br> Kurs: Informationen visualisieren</p>
+              <a href="https://drive.google.com/file/d/1MpIVhgfFs6sYKoUA3I6n47gQebhSnUtV/view?usp=sharing" target="blank"> Zertifikat - Informationen visualisieren</a>
+              <p> Infografik - Aufarbeitung komplexer Daten, Visualisierungs- <br> möglichkeiten, Recherchemöglichkeiten </p>
+              <a href=https://drive.google.com/file/d/1bU2bWT2YngvFWQ8CapkrQ-Ud8IA6S81X/view?usp=sharing" target="blank"> Zertifikat - Editorial Illustrationen</a>
+              <p> Einführung, Entwicklung von Illustrationen für eine Kolumne und einen Artikel mit Fokus auf Skizze, Reinzeichnung und Layout </p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -254,7 +256,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Grafik Designer</h4>
+              <h4>Graphic Designer</h4>
               <h5>2015 - 2019</h5>
               <p><em>All you need GmbH</em></p>
               <ul>
@@ -264,7 +266,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Grafik Designer</h4>
+              <h4>Graphic Designer</h4>
               <h5>2010 - 2015</h5>
               <p><em>WirmachenDruck GmbH</em></p>
               <ul>
@@ -429,13 +431,8 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="icofont-settings"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="icofont-tasks-alt"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <h4 class="title"><a href="">Animationen</a></h4>
+            <p class="description">Motion Graphics, Vorspann und Abspann, Anzeigen, Animierte Logos, Trailers, Präsentationen, Banner, Gifs</p>
           </div>
         </div>
 
