--- a/index.html
+++ b/index.html
@@ -505,8 +505,7 @@
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Steffi ist mir über bald 5 Jahre eine tolle Kollegin gewesen, die mit Charme, Witz und einer unglaublichen Fachtiefe
-              viele Menschen begeistert hat. Wer mehr über sie wissen mag, kann mich gerne kontaktieren ... wird allerdings sehr
-              positiv 😉 Herzlich! Max
+              viele Menschen begeistert hat.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
