--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -46,24 +46,24 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Stefanie Schutta</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.instagram.com/stefanie.schutta/" target="blank" class="instagram"><i
+              class="bx bxl-instagram"></i></a>
+          <a href="https://www.behance.net/stefanieschutta" target="blank" class="google-plus"><i class='bx bxl-behance'></i></a>
+          <a href="https://www.linkedin.com/in/stefanie-schutta-068b83188/" target="blank" class="linkedin"><i
+              class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
       <nav class="nav-menu">
         <ul>
           <li><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#about"><i class="bx bx-user"></i> <span>Über mich</span></a></li>
+          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Lebenslauf</span></a></li>
           <li class="active"><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <li><a href="#services"><i class="bx bx-server"></i> Leistungen</a></li>
+          <li><a href="#contact"><i class="bx bx-envelope"></i> Kontakt</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -79,10 +79,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>Portfolio Details</li>
           </ol>
         </div>
 
@@ -102,21 +102,24 @@
           </div>
 
           <div class="portfolio-info">
-            <h3>Project information</h3>
+            <h3>Currywurst Gin</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Kategorie</strong>: Corporate Design</li>
+              <li><strong>Kunde</strong>: Gin Chilla Bar Berlin</li>
+              <li><strong>Projekt</strong>: 1. März, 2020</li>
+             <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>--> 
             </ul>
           </div>
 
         </div>
 
         <div class="portfolio-description">
-          <h2>This is an example of portfolio detail</h2>
+          <h2>Corporate Design - Currywurst Gin</h2>
           <p>
-            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+            Jedes Teammitglied der Gin Chilla Bar durfte als Projekt seinen eigenen Gin herstellen. Mit einer kleinen Destille und Alkohol haben alle auf unterschiedliche Methoden
+            und Aromen gesetzt. Nachdem jeder seine Idee destilliert hatte, wurden alle Gins gegeneinander verkostet. Sieger dieser kleinen Challenge wurde der „Currywurst Gin“. 
+            Nun war der richtige Look für das Produkt gefragt. Hier kam ich ins Spiel. Farb- und Schriftwahl, die Illustration und Produktion des Etiketts, Merch (Flyer, 
+            Visitenkarten, Thekendisplay) und Produktfotografie für die sozialen Medien fielen in meinen Aufgabenbereich.
           </p>
         </div>
 
