--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <div class="section-title">
           <h2>Fähigkeiten</h2>
-          <p> Als Designer muss man stets am Zahn der Zeit sein, daher ist lebenslanges Erlenern neuer Fähigkeiten und Technologien für mich eine Selbstverständlichkeit. </p>
+          <p> Als Designer muss man stets am Puls der Zeit sein, daher ist lebenslanges Erlenern neuer Fähigkeiten und Technologien für mich eine Selbstverständlichkeit. </p>
         </div>
 
         <div class="row skills-content">
@@ -570,7 +570,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="name">Bestreff</label>
+                <label for="name">Betreff</label>
                 <input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                 <div class="validate"></div>
               </div>
