--- a/inner-page.html
+++ b/inner-page.html
@@ -46,7 +46,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Stefanie Schutta</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -59,11 +59,11 @@
       <nav class="nav-menu">
         <ul>
           <li><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#about"><i class="bx bx-user"></i> <span>Über mich</span></a></li>
+          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Lebenslauf</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <li><a href="#services"><i class="bx bx-server"></i> Leistungen</a></li>
+          <li><a href="#contact"><i class="bx bx-envelope"></i> Kontakt</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
