--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
           <p></p>
         </div>
 
-       <div> <!--class="owl-carousel testimonials-carousel"-->
+       <div class="row"> <!--class="owl-carousel testimonials-carousel"-->
 
             <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
             <p>
