--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
           <p></p>
         </div>
 
-       <div class="col-lg-4 col-md-6 icon-box"> <!--class="owl-carousel testimonials-carousel"-->
+       <div class="owl-carousel testimonials-carousel"> <!---->
 
             <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
             <p>
