--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               <h5>2020 - Heute</h5>
               <p><em>Berlin, Deutschland </em></p>
               <ul>
-                <li>Consulting & Social Media Design für Greytide</li>
+                <li>Consulting & Social Media Design für Greytide, Berlin</li>
                 <li>Konzept, Social Media Design, Produktfotografie für Gin Chilla Bar Berlin. </li>
                 <li>Corporate Design für Currywurst Gin, Gin Chilla Bar Berlin</li>
               </ul>
@@ -247,7 +247,7 @@
             <div class="resume-item">
               <h4>Senior Graphic Designer</h4>
               <h5>2019 - 2020</h5>
-              <p><em>EL PATO Medien GmbH</em></p>
+              <p><em>EL PATO Medien GmbH, Berlin</em></p>
               <ul>
                 <li>User Interface Design für diverse Produkte der GmbH</li>
                 <li>Logo Design</li>
@@ -258,7 +258,7 @@
             <div class="resume-item">
               <h4>Graphic Designer</h4>
               <h5>2015 - 2019</h5>
-              <p><em>All you need GmbH</em></p>
+              <p><em>All you need GmbH, Berlin</em></p>
               <ul>
                 <li>Entwicklung und Überwachung des Corporate Designs</li>
                 <li>Social Media Design, Web Design (animated Ads, Landingpages etc.)</li>
@@ -268,7 +268,7 @@
             <div class="resume-item">
               <h4>Graphic Designer</h4>
               <h5>2010 - 2015</h5>
-              <p><em>WirmachenDruck GmbH</em></p>
+              <p><em>WirmachenDruck GmbH, Berlin</em></p>
               <ul>
                 <li>Kreation von Printprodukten</li>
                 <li>Großkundenbetreuung</li>
@@ -432,7 +432,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="icofont-settings"></i></div>
             <h4 class="title"><a href="">Animationen</a></h4>
-            <p class="description">Motion Graphics, Vorspann und Abspann, Anzeigen, Animierte Logos, Trailers, Präsentationen, Banner, Gifs</p>
+            <p class="description">Motion Graphics, Intro/Outro, Anzeigen, Animierte Logos, Trailers, Präsentationen, Banner, Gifs</p>
           </div>
         </div>
 
@@ -478,7 +478,7 @@
               Grafikabteilung sowohl für das Marketing, als auch für alle anderen Abteilungen vereinfachte. Weiterhin wurden
               qualitativ hochwertigere Ergebnisse erzielt, da Zeit, welche durch unnötige Rückfragen vorher verschwendet wurde, nun
               eingespart werden konnte. Kurz und knapp: ich war mit Stefanie sowohl als Kollegin, als auch als Vorgesetzte sehr
-              glücklich und finde es schade, dass wir nicht mehr zusammen arbeiten. Vielen Dank für die kreative Zeit!
+              glücklich und finde es schade, dass wir nicht mehr zusammen arbeiten. 
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
