change text at portfolio 2

--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -119,10 +119,10 @@
                 <div class="portfolio-description">
                     <h2>User Interface - Sharepoint</h2>
                     <p>
-                        Zur Optimierung der Arbeitsprozesse habe ich für Sharepoint eine modular aufgebautes Dashboard konzipiert und
-                        gestaltet.Die wichtigsten Tools sind für alle Mitarbeiter übersichtlich zusammengefasst. Die einzelnen Module kann jeder
-                        Mitarbeiter frei anordnen. Der Vorteil des Dashboards ist, dass man nicht mehr alle einzelnen Programme
-                        (Kalender, Postfach, Terminplaner usw.).
+                        Zur Optimierung der Arbeitsprozesse habe ich ein Intranet auf Basis von Sharepoint konzipiert und gestaltet. 
+                        Das Dashboard besteht aus einzelnen Modulen, mit den wichtigsten Tools die für alle Mitarbeiter gültig sind und übersichtlich 
+                        zusammengefasst wurden. Die einzelnen Module kann jeder Mitarbeiter frei anordnen. Der Vorteil des Dashboards ist, dass man nicht mehr alle einzelnen Programme
+                        (Kalender, Postfach, Terminplaner usw.) öffnen muss, sondern nur noch sein personalisiertes Intranet.
                     </p>
                 </div>
 
