change content in portfolio

--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -102,6 +102,7 @@
                         <img src="assets/img/portfolio-details-10.jpg" class="img-fluid" alt="">
                         <img src="assets/img/portfolio-details-11.jpg" class="img-fluid" alt="">
                         <img src="assets/img/portfolio-details-12.jpg" class="img-fluid" alt="">
+                    
                     </div>
 
                     <div class="portfolio-info">
@@ -118,7 +119,8 @@
                 <div class="portfolio-description">
                     <h2>App Design - Loop Fashion</h2>
                     <p>
-                        Konzept und Design einer Fashion App, inklusive High Fidelity Prototype. Clean, modern
+                        Konzept und Design einer Fashion App, inklusive High Fidelity Prototype. Das Design zeichnet sich aus durch eine dominante Typographie, 
+                        kräftige, auffallende Farben und einen cleanen modernen Aufbau. Unnötig ablenkende Elemente wurden vermieden.
                     </p>
                 </div>
 
