--- a/portfolio-details4.html
+++ b/portfolio-details4.html
@@ -106,9 +106,9 @@
                     </div>
 
                     <div class="portfolio-info">
-                        <h3>App Design - Loop Fashion</h3>
+                        <h3>Corporate Design - Organic Bee</h3>
                         <ul>
-                            <li><strong>Kategorie</strong>: Corporate Design</li>
+                            <li><strong>Kategorie</strong>: Corporate Design </li>
                             <li><strong>Projekt</strong>: 16.August, 2020</li>
                             <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
                         </ul>
