--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3> Staatlich geprüfte Grafik Designerin</h3>
+            <h3> Staatl. geprüfte Grafik Designerin</h3>
             <p class="font-italic">
             </p>
             <div class="row">
@@ -288,7 +288,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Hier finden Sie ausgewählte Arbeiten. Weitere finden Sie unter behance.de</p>
+          <p>Hier finden Sie ausgewählte Arbeiten aus meinem Portfolio.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -405,7 +405,7 @@
 
         <div class="section-title">
           <h2>Leistungen</h2>
-          <p>Als Fullservice Designer biete ich ein breites Spektrum an Leistungen an. </p>
+          <p>Als Fullservice Designer biete ich ein breites kreatives Spektrum von Leistungen an, vom Konzept, zum Design, bishin zum fertigen Produkt. </p>
         </div>
 
         <div class="row">
@@ -432,7 +432,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="icofont-settings"></i></div>
             <h4 class="title"><a href="">Animationen</a></h4>
-            <p class="description">Motion Graphics, Intro/Outro, Anzeigen, Animierte Logos, Trailers, Präsentationen, Banner, Gifs</p>
+            <p class="description">Motion Graphics, Intro/Outro, Anzeigen, Animierte Logos, Trailer, Präsentationen, Banner, Gifs</p>
           </div>
         </div>
 
