--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
       </div>
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= Contact Section ======= -->
+    <!-- ======= Contact Section ======= 
     <section id="contact" class="contact">
       <div class="container">
 
@@ -530,7 +530,7 @@
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
                 <p>s.schutta@gmx.de</p>
-              </div>
+              </div>-->
 
               <!--start own code-->
               <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
