--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
       </div>
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= Contact Section ======= 
+    <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
 
@@ -530,11 +530,11 @@
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
                 <p>s.schutta@gmx.de</p>
-              </div>-->
+              </div>
 
               <!--start own code-->
-            <!--  <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
-                  <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div>
+              <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+                <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div>
                 <script>(function () {
                     var setting = { "height": 970, "width": 803, "zoom": 12, "queryString": "Berlin, Deutschland", "place_id": "ChIJAVkDPzdOqEcRcDteW0YgIQQ", "satellite": false, "centerCoord": [52.50716752966575, 13.424731743221988], "cid": "0x42120465b5e3b70", "lang": "de", "cityUrl": "/germany/berlin", "cityAnchorText": "Karte von Berlin, Berlin City Area, Deutschland", "id": "map-9cd199b9cc5410cd3b1ad21cab2e54d3", "embed_id": "338546" };
                     var d = document;
@@ -547,9 +547,7 @@
                     var to = d.getElementsByTagName('script')[0];
                     to.parentNode.insertBefore(s, to);
                   })();</script><a href="https://1map.com/de/map-embed">1 Map</a>
-              </div> --> 
-              
-              <!--stop own code-->
+              </div> <!--stop own code-->
 
       <!--<div class="phone">
                 <i class="icofont-phone"></i>
@@ -558,7 +556,7 @@
               </div>--> 
 
               <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>-->
-           <!-- </div>
+            </div>
 
           </div>
 
@@ -597,7 +595,7 @@
 
         </div>
 
-      </div> -->
+      </div>
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
