--- a/portfolio-details5.html
+++ b/portfolio-details5.html
@@ -119,9 +119,9 @@
                 <div class="portfolio-description">
                     <h2>UI Design - Fantasy Travel</h2>
                     <p>
-                       Was wolltest du werden als du klein warst? Vielleicht ein Astronaut, der ganze Welten entdecken kann? 
-                       Sich nochmal wie ein KKind fühlen, neue Welten auf eigene Faust entdecken und Abenteuer erleben, das ist es was Fantasy Travel will.
-                       Unbegrenzt. Unbekannt. Unendliche Möglichkeiten.
+                    Was wolltest du mal werden, wenn du groß bist? Vielleicht ein Astronaut, weil er die ganze Welt und noch viel mehr 
+                    entdecken kann? Sich noch einmal wie ein Kind fühlen, neue Plätze für sich entdecken, auf ganz individuelle Art und Weise. 
+                    Das will Fantasy Travel. 
                     </p>
                 </div>
 
