--- a/portfolio-details6.html
+++ b/portfolio-details6.html
@@ -65,8 +65,8 @@
                     <li><a href="#about"><i class="bx bx-user"></i> <span>Über mich</span></a></li>
                     <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Lebenslauf</span></a></li>
                     <li class="active"><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-                    <li><a href="#services"><i class="bx bx-server"></i> Leistungen</a></li>
-                    <li><a href="#contact"><i class="bx bx-envelope"></i> Kontakt</a></li>
+                    <li><a href="#services"><i class="bx bx-server"></i>Leistungen</a></li>
+                    <li><a href="#contact"><i class="bx bx-envelope"></i>Kontakt</a></li>
 
                 </ul>
             </nav><!-- .nav-menu -->
@@ -99,17 +99,17 @@
                 <div class="portfolio-details-container">
 
                     <div class="owl-carousel portfolio-details-carousel">
-                        <img src="assets/img/portfolio-details-13.jpg" class="img-fluid" alt="">
-                        <img src="assets/img/portfolio-details-14.jpg" class="img-fluid" alt="">
-                        <img src="assets/img/portfolio-details-15.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/portfolio-details-19.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/portfolio-details-20.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/portfolio-details-21.jpg" class="img-fluid" alt="">
                     
                     </div>
 
                     <div class="portfolio-info">
-                        <h3>Corporate Design - Organic Bee</h3>
+                        <h3>Editorial Design - Mare Magazin</h3>
                         <ul>
-                            <li><strong>Kategorie</strong>: Corporate Design </li>
-                            <li><strong>Projekt</strong>: 16.August, 2020</li>
+                            <li><strong>Kategorie</strong>: Editorial Design </li>
+                            <li><strong>Projekt</strong>: 31. Juli, 2018</li>
                             <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
                         </ul>
                     </div>
@@ -117,11 +117,10 @@
                 </div>
 
                 <div class="portfolio-description">
-                    <h2>Corporate Design - Organic Bee</h2>
+                    <h2>Editorial Design - Mare Magazin</h2>
                     <p>
-                        Konzept und Design für einen nachhaltig und schonend gewonnenen Honig. Die Bild-Wort-Marke des Logos 
-                        ist gleichzeitig simpel und plakativ. Die Waben erinnern an einen Biensenstock. Sowohl Wort- als auch Bildmarke 
-                        funtkionieren unabhängig voneinander auch alleinstehend und haben einen hohen WIedererkennungswert.
+                    Für einen Artikel über Bordkatzen im Mare Magazin musste das Editorial Design erstellt werden. 
+                    Basierend auf dem Inhalt des Artikels wurde ein Konzept, Skizzen, Entwürfe und schließlich das finale Design von mir erstellt.
                     </p>
                 </div>
 
