--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>Über mich</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Lebenslauf</span></a></li>
-          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Leistungen</a></li>
+          <li><a href="#portfolio"><i class="bx bx-book-content"></i>Portfolio</a></li>
+          <li><a href="#services"><i class="bx bx-server"></i>Leistungen</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Kontakt</a></li>
 
         </ul>
@@ -304,7 +304,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -314,7 +314,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -344,7 +344,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -354,7 +354,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -374,7 +374,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -384,7 +384,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -410,27 +410,27 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="icofont-computer"></i></div>
+            <div class="icon"><i class="icofont-image"></i></div> 
             <h4 class="title"><a href="">Grafik Design</a></h4>
             <p class="description">Corporate Design, Visual Identity, Marketing und Werbung, Editorial Design</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
+            <div class="icon"><i class="icofont-computer"></i></div>
             <h4 class="title"><a href="">Web Design</a></h4>
             <p class="description">User Interface Design, App Design, High Fidelity Prototypes, userzentrierte, responsive Webseiten</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="icofont-earth"></i></div>
+            <div class="icon"><i class='bx bx-vector'></i></div>
             <h4 class="title"><a href="">Grafiken & Illustrationen</a></h4>
             <p class="description">Infografiken, Cover Design, Icon/Logo Design, Merchandise Design</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="icofont-image"></i></div>
+            <div class="icon"><i class='bx bxs-camera'></i></div>
             <h4 class="title"><a href="">Fotografie & Bildbearbeitung</a></h4>
             <p class="description">Produkt-, Food-, Landschafts- und Architekturfotografie, Bildretusche, Compositing</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="icofont-settings"></i></div>
+            <div class="icon"><i class='bx bxs-camera-movie'></i></div>
             <h4 class="title"><a href="">Animationen</a></h4>
             <p class="description">Motion Graphics, Intro/Outro, Anzeigen, Animierte Logos, Trailer, Präsentationen, Banner, Gifs</p>
           </div>
@@ -561,7 +561,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://formspree.io/f/mbjpwjeg" method="post" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/mbjpwjeg" method="post" role="form" class="php-email-form" >
               <div class="form-row">
                 <div class="form-group col-md-6">
                   <label for="name">Ihr Name</label>
