add impressum, content, portfolio

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Lebenslauf</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i>Portfolio</a></li>
           <li><a href="#services"><i class="bx bx-server"></i>Leistungen</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Kontakt</a></li>
+          <li><a href="#contact"><i class="bx bx-envelope"></i>Kontakt</a></li>
+          <li><a href="impressum.html"><i class='bx bx-info-circle'></i>Impressum/Datenschutz</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
