--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <div class="section-title">
           <h2>Fähigkeiten</h2>
-          <p> Als Designer muss man stets am Puls der Zeit sein, daher ist lebenslanges Erlernen neuer Fähigkeiten und Technologien für mich eine Selbstverständlichkeit. </p>
+          <p> Als Designer muss man stets am Puls der Zeit sein, facettenreich und kreativ. Lebenslanges Lernen neuer Fähigkeiten und Technologien ist daher für mich ein Muss. </p>
         </div>
 
         <div class="row skills-content">
