--- a/portfolio-details8.html
+++ b/portfolio-details8.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -14,7 +14,9 @@
 
     <!-- Google Fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i 
+      Raleway:300,300i,400,400i,500,500i,600,600i,700,700i 
+      Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
 
@@ -135,13 +137,14 @@
       <!-- End Breadcrumbs -->
 
       <!-- ======= Portfolio Details Section ======= -->
+
       <section id="portfolio-details" class="portfolio-details">
         <div class="container">
           <div class="portfolio-details-container">
-            <div class="owl-carousel portfolio-details-carousel">
+            <div class="iframe-container">
               <iframe
-                width="1000"
-                height="563"
+                width="1120"
+                height="630"
                 src="https://www.youtube.com/embed/o2HcQjjfTXQ"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -149,6 +152,7 @@
               ></iframe>
             </div>
             <br /><br /><br />
+
             <div class="portfolio-info">
               <h3>Logo Design & Animation "Into the Green"</h3>
               <ul>
