--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
               Anzeigen, Website-Design, Corporate Design oder Printkampagnen.
               <br />
               <br />
-              Werfen Sie gerne einen Blick auf mein Portfolio und wenn Ihnen
-              gefällt, was Sie sehen, kontaktieren Sie mich gerne, damit wir
-              gemeinsam die Zukunft Ihres Unternehmens gestalten und Ihre Kunden
-              mit neuen, einzigartigen Ideen begeistern können.
+              Werfen Sie einen Blick auf mein Portfolio und wenn Ihnen gefällt,
+              was Sie sehen, kontaktieren Sie mich gerne, damit wir gemeinsam
+              die Zukunft Ihres Unternehmens gestalten und Ihre Kunden mit
+              neuen, einzigartigen Ideen begeistern können.
             </p>
           </div>
 
@@ -346,7 +346,7 @@
                   href="https://www.udemy.com/certificate/UC-dc643665-3787-4c6f-9378-20cfde6a3bdf/"
                   target="blank"
                 >
-                  Zertifikat -After Effects CC Masterclass</a
+                  Zertifikat - After Effects CC Masterclass</a
                 >
                 <p>
                   Visual Effects, Motion Graphics, Transitions, Motion Tracking
@@ -402,7 +402,7 @@
                   <li>Consulting & Social Media Design für Greytide, Berlin</li>
                   <li>
                     Konzept, Social Media Design, Produktfotografie für Gin
-                    Chilla Bar Berlin.
+                    Chilla Bar Berlin
                   </li>
                   <li>
                     Corporate Design für Currywurst Gin, Gin Chilla Bar Berlin
@@ -455,7 +455,7 @@
         <div class="container">
           <div class="section-title">
             <h2>Portfolio</h2>
-            <p>Hier finden Sie ausgewählte Arbeiten aus meinem Portfolio.</p>
+            <p>Hier finden Sie ausgewählte Arbeiten meines Portfolios.</p>
           </div>
 
           <div class="row" data-aos="fade-up">
@@ -465,6 +465,7 @@
                 <li data-filter=".filter-app">User Interface Design</li>
                 <li data-filter=".filter-card">Corporate Design</li>
                 <li data-filter=".filter-web">Grafik Design</li>
+                <li data-filter=".filter-animation">Animationen</li>
               </ul>
             </div>
           </div>
@@ -628,7 +629,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-animation">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/portfolio-8.jpg"
