title of portfolio sites

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                     href="assets/img/portfolio/portfolio-1.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="App 1"
+                    title="Corporate Design - Currywurst Gin"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a href="portfolio-details.html" title="More Details"
@@ -509,7 +509,7 @@
                     href="assets/img/portfolio/portfolio-2.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="Web 3"
+                    title="User Interface Design - Sharepoint"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a href="portfolio-details2.html" title="More Details"
@@ -531,7 +531,7 @@
                     href="assets/img/portfolio/portfolio-3.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="App 2"
+                    title="App Design - Loop Fashion"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a href="portfolio-details3.html" title="More Details"
@@ -553,7 +553,7 @@
                     href="assets/img/portfolio/portfolio-4.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="Card 2"
+                    title="Corporate Design - Organic Bee"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a href="portfolio-details4.html" title="More Details"
@@ -575,7 +575,7 @@
                     href="assets/img/portfolio/portfolio-5.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="Web 2"
+                    title="User Interface Design - Fantasy Travel"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a href="portfolio-details5.html" title="More Details"
@@ -597,7 +597,7 @@
                     href="assets/img/portfolio/portfolio-6.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="App 3"
+                    title="Editorial Design - Mare Magazin"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a href="portfolio-details6.html" title="More Details"
@@ -619,7 +619,7 @@
                     href="assets/img/portfolio/portfolio-7.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="Card 1"
+                    title="Produktfotografie - Gin Chilla Bar"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a href="portfolio-details7.html" title="More Details"
@@ -641,7 +641,7 @@
                     href="assets/img/portfolio/portfolio-8.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="Card 3"
+                    title="Logo Design & Animation - Into the green"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a href="portfolio-details8.html" title="More Details"
@@ -663,7 +663,7 @@
                     href="assets/img/portfolio/portfolio-9.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="Web 3"
+                    title="Landing Page Design - mylife"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a href="portfolio-details9.html" title="More Details"
