--- a/index.html
+++ b/index.html
@@ -683,9 +683,8 @@
           <div class="section-title">
             <h2>Leistungen</h2>
             <p>
-              Als Fullservice Designer biete ich ein breites kreatives Spektrum
-              von Leistungen an, vom Konzept, zum Design, bishin zum fertigen
-              Produkt.
+              Als Fullservice Designer biete ich ein breites Spektrum an Leistungen an. 
+              Vom Konzept, zum Design, bishin zum fertigen Produkt gestalte ich für Sie und Ihre Kunden individuelle Lösungen.
             </p>
           </div>
 
@@ -854,8 +853,7 @@
               <h4>Greytide, Berlin</h4>
             </div>
           </div>
-        </div>
-      </section>
+             </section>
       <!-- End Testimonials Section -->
 
       <!-- ======= Contact Section ======= -->
